Adds cursor and border properties

--- a/src/assets/stylesheets/application.styl
+++ b/src/assets/stylesheets/application.styl
@@ -35,8 +35,14 @@ body
   cursor: pointer
 
 picture
-  position:relative
+  cursor: crosshair
   display: inline-block
+  position:relative
 
 #image
+  cursor: crosshair
   display: inline-block
+
+canvas
+  border: 1px solid
+  cursor: crosshair
