Adds crosshair extension

--- a/src/assets/stylesheets/application.styl
+++ b/src/assets/stylesheets/application.styl
@@ -35,14 +35,14 @@ body
   cursor: pointer
 
 picture
-  cursor: crosshair
+  @extend $crosshair
   display: inline-block
   position:relative
 
 #image
-  cursor: crosshair
+  @extend $crosshair
   display: inline-block
 
 canvas
+  @extend $crosshair
   border: 1px solid
-  cursor: crosshair
